@@ -7,6 +7,11 @@ pipeline {
 		timeout(time:1, unit:'HOURS')
 	}
 	
+	environment {
+		def USERMAIL = "1058180192@qq.com;lei.fan@capgemini.com"
+		MAVEN_OPTS = "-Xmx512M"
+		//-XX:MaxPermSize=512M
+	}
 	
 	stages {
 
